--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+print("welcome to our game "my story",
+you will be able to create your own story from start to finish with multiple choice endings. each action will have the consequences that YOU have chosen")
